Gemfile completed with boostrap faker simpleforms & routes created to arrive directly to home & view home created with to do list

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
 <h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<p>Homepage</p>
+<p>To do list</p>
+
+<ul>
+  <li>Navbar</li>
+  <li>Footer</li>
+  <li>Responsive</li>
+  <li>Contact Pages</li>
+  <li>link to pages</li>
+</ul>
