Views modified to add paths

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,3 +10,6 @@
   <li>Contact Pages</li>
   <li>link to pages</li>
 </ul>
+
+<%= link_to "About", pages_about_path %>
+<%= link_to "Contact", pages_contact_path %>
